Add automatic module name